// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders container correctly 1`] = `
<div
  className="css-xgklm7 sc-bdVaJa hFurdN"
>
  The children!
</div>
`;

exports[`Container renders container correctly with top padding 1`] = `
<div
  className="css-19v68mi sc-bdVaJa hFurdN"
>
  The children!
</div>
`;
